fix alignment

--- a/styles/User.module.css
+++ b/styles/User.module.css
@@ -21,10 +21,11 @@ margin: 1rem 0;
 
 }
 .frame  h2 {
-  padding: 0rem 3rem 1rem;
-  font-size: 0.75rem;
+  padding: 0rem 2rem 1rem;
+  font-size: 1.4rem;
   text-align: center;
   font-weight: 400;
+  line-height: 2.4rem;
 }
 .frame  h3 {
   padding: 0 3rem;
@@ -64,7 +65,7 @@ margin: 1rem 0;
   min-height: 10rem;
   position: relative;
   height: 10rem;
-  width: 90%;
+  width: 20rem;
   border-radius: 8px;
   align-self: center;
   display: flex;
